tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@unknown_subscript.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/unknown_subscript.txt
---
error: Index expression is undefined
 --> unknown_subscript.txt:1:12
  |
1 | {{ numbers[unknown] }}
  |            ^^^^^^^
